--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 </head>
 <body>
-    <header>
+    <header class="header">
  <!-- header banner -->
 <div class="banner" >
-    <div style="text-align:right;">
-        <h1 class="banner-title">All Thinks Are Possible
+    <div style="text-align:right"> 
+        <h1 class="banner-title">All Thinks Are Possible <br>
              If You believe 
             </h1> <p class="banner-paragraph">if you believe you can do it . you can 
                 actually do it . <br> you have to trust yourself and you have to do everything in a right
