--- a/index.html
+++ b/index.html
@@ -14,15 +14,30 @@
     <header class="header">
  <!-- header banner -->
 <div class="banner" >
-    <div style="text-align:right"> 
+    <div style="text-align: right"> 
         <h1 class="banner-title">All Thinks Are Possible <br>
              If You believe 
             </h1> <p class="banner-paragraph">if you believe you can do it . you can 
                 actually do it . <br> you have to trust yourself and you have to do everything in a right
                 way. <br> you have to listen to all your friends and family. always try to help others if you can
-            </p> <h4><button class="btn">contact us</button></h4>
+            </p> <h4><button class="btn">contact us</button></h4>>
     </div>
 </div>
-    </header>
+    </header> 
+    <main>
+        <div class="pic-details">
+           <div> <h2 class="pic-title">My failures of previous year</h2>
+            <p class="pic-info">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC,<br> making it over 2000 years old. Richard McClintock.</p>
+            <ul class="pic-list"><li class="main-li">Contrary to popular belief, is not simple.
+                </li>
+            <li class="main-li">people rejected me so many times</li>
+            <li class="main-li" >they didnt like my project</li>
+            <li class="main-li">they didnt pay me</li>
+            <li class="main-li">i was sad but didnt give up</li></ul> </div>
+            <div ><img src="./images/person.png" alt=""></div>
+            </div>
+        
+        
+    </main>
 </body>
 </html>
