--- a/index.html
+++ b/index.html
@@ -36,7 +36,35 @@
             <li class="main-li">i was sad but didnt give up</li></ul> </div>
             <div ><img src="./images/person.png" alt=""></div>
             </div>
-        
+            <!-- mt plans section -->
+        <section class="myplan">
+            <h2 class="plans-title">My plans</h2>
+<div class="skills-container">
+    <div class="skill">
+        <img src="./images/icons/smoke.png" alt="">
+        <p class="skill-title">Smoking Habit</p>
+        <p class="skill-description">i want to end</p>
+    </div>
+    <div class="skill">
+        <img src="./images/icons/web.png" alt="">
+        <p class="skill-title">Web Development</p>
+        <p class="skill-description">i want to start</p>
+    </div>
+    <div class="skill">
+        <img src="./images/icons/js.png" alt="">
+        <p class="skill-title">Javascript</p>
+        <p class="skill-description">i want to develop</p>
+    </div>
+    <div class="skill">
+        <img src="./images/icons/ecom.png" alt="">
+        <p class="skill-title">ecommerce</p>
+        <p class="skill-description">i want to learn</p>
+    </div>
+</div>
+
+
+
+        </section>
         
     </main>
 </body>
