--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </h1> <p class="banner-paragraph">if you believe you can do it . you can 
                 actually do it . <br> you have to trust yourself and you have to do everything in a right
                 way. <br> you have to listen to all your friends and family. always try to help others if you can
-            </p> <h4><button class="btn">contact us</button></h4>>
+            </p> <h4><button class="btn">contact us</button></h4> 
     </div>
 </div>
     </header> 
@@ -60,12 +60,23 @@
         <p class="skill-title">ecommerce</p>
         <p class="skill-description">i want to learn</p>
     </div>
-</div>
-
-
-
+</div></section>
+        <!-- mindset -->
+        <section class="mindset-title">
+            <div>
+                <h3 class="mindset-heading">Awlays keep a positive <br> mindset</h3>
+                <h4><button class="btn2">Call now</button></h4> 
+            </div>
         </section>
-        
+        <!-- contact --> <section class="contact">
+<div class="contact2"><h3 class="headd">future</h3><p class="details">There are many variations of passages of Lorem Ipsum available,br <br> but the majority have <br> suffered alteration in some form, by injected humour, or randomised words</p>
+    <img class="icon" src="./images/icons/fb.png" alt=""><img class="icon" src="./images/icons/twitter.png" alt=""><img class="icon" src="./images/icons/youtube.png" alt=""></div>
+    <div><h3 class="headd">subscribe</h3> 
+    <form action=""><input class="input" type="text" placeholder="your email"><p><input class="btn2" type="submit" value="subscribe"></p></form>
+    </div>
+           </section>
+    
+
     </main>
 </body>
 </html>
